--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
       <div class="container">
         <nav>
           <img src="IMAGES/logo.png" alt="" class="logo" />
-          <ul>
+          <ul id="sidemenu">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Portfolio</a></li>
             <li><a href="#">Contact</a></li>
+            <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
           </ul>
+          <i class="fa-solid fa-bars" onclick="openmenu()"></i>
         </nav>
         <div class="header-text">
           <p>Web Developer / Graphic Desginer</p>
