--- a/index.html
+++ b/index.html
@@ -209,6 +209,38 @@
         <a href="" class="btn">See More</a>
       </div>
     </div>
+
+    <!-----------------------CONTACT------------->
+    <div id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="contact-left">
+            <h1 class="subtitle">Contact Me</h1>
+            <a href="mailto:kondwanipadyera@gmail.com" class="contact-links"><p>kondwanipadyera@gmail.com</p></a>
+            <a href="tel:+265887107311" class="contact-links"><p>+265887107311</p></a>
+            <div class="social-icons">
+              <a href=""><i class="fa-brands fa-facebook"></i></a>
+              <a href=""><i class="fa-brands fa-linkedin"></i></a>
+              <a href=""><i class="fa-brands fa-instagram"></i></a>
+              <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+              <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+            <a href="IMAGES/UNICAF.jpg" download class="btn btn2">Download CV</a>
+          </div>
+          <div class="contact-right">
+            <form action="">
+              <input type="text" name="Name" placeholder="Your Name" required>
+              <input type="email" name="email" placeholder="Your email" required>
+              <textarea name="message" rows="6" placeholder="Your message"></textarea>
+              <button type="submit" class="btn btn2">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="copyright">
+        <p>Copyright @ KHOO 2024</p>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
