Added links to my social media accounts -Added links to sections for easy navigation

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
           <img src="IMAGES/logo.png" alt="" class="logo" />
           <ul id="sidemenu">
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
             <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
           </ul>
           <i class="fa-solid fa-bars" onclick="openmenu()"></i>
@@ -182,28 +182,28 @@
           <div class="work">
             <img src="IMAGES/password.png" alt="" />
             <div class="layer">
-                <h3>Web Application</h3>
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Accusantium odio dicta unde iusto minima nulla doloribus illo,
-                  commodi laboriosam consectetur. Consectetur nesciunt expedita
-                  voluptate nam quas! Eum cupiditate explicabo ipsa!
-                </p>
-                <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
-              </div>
+              <h3>Web Application</h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Accusantium odio dicta unde iusto minima nulla doloribus illo,
+                commodi laboriosam consectetur. Consectetur nesciunt expedita
+                voluptate nam quas! Eum cupiditate explicabo ipsa!
+              </p>
+              <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+            </div>
           </div>
           <div class="work">
             <img src="IMAGES/text.jpg" alt="" />
             <div class="layer">
-                <h3>Biography</h3>
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Accusantium odio dicta unde iusto minima nulla doloribus illo,
-                  commodi laboriosam consectetur. Consectetur nesciunt expedita
-                  voluptate nam quas! Eum cupiditate explicabo ipsa!
-                </p>
-                <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
-              </div>
+              <h3>Biography</h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Accusantium odio dicta unde iusto minima nulla doloribus illo,
+                commodi laboriosam consectetur. Consectetur nesciunt expedita
+                voluptate nam quas! Eum cupiditate explicabo ipsa!
+              </p>
+              <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+            </div>
           </div>
         </div>
         <a href="" class="btn">See More</a>
@@ -216,22 +216,42 @@
         <div class="row">
           <div class="contact-left">
             <h1 class="subtitle">Contact Me</h1>
-            <a href="mailto:kondwanipadyera@gmail.com" class="contact-links"><p>kondwanipadyera@gmail.com</p></a>
-            <a href="tel:+265887107311" class="contact-links"><p>+265887107311</p></a>
+            <a href="mailto:kondwanipadyera@gmail.com" class="contact-links"
+              ><p>kondwanipadyera@gmail.com</p></a
+            >
+            <a href="tel:+265887107311" class="contact-links"
+              ><p>+265887107311</p></a
+            >
             <div class="social-icons">
-              <a href=""><i class="fa-brands fa-facebook"></i></a>
-              <a href=""><i class="fa-brands fa-linkedin"></i></a>
-              <a href=""><i class="fa-brands fa-instagram"></i></a>
-              <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=100084319704616"
+                ><i class="fa-brands fa-facebook"></i
+              ></a>
+              <a
+                href="https://www.linkedin.com/in/kondwani-padyera-9a511a26b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                ><i class="fa-brands fa-linkedin"></i
+              ></a>
+              <a href="https://www.instagram.com/padyerakondwani?utm_source=qr&igsh=Y3F5Zjh3b2F3ZWdp"><i class="fa-brands fa-instagram"></i></a>
+              <a href="https://x.com/KPadyera?t=55bmJblVSq4lthSdrhm2Ow&s=09"><i class="fa-brands fa-x-twitter"></i></a>
               <a href=""><i class="fa-brands fa-whatsapp"></i></a>
             </div>
-            <a href="IMAGES/UNICAF.jpg" download class="btn btn2">Download CV</a>
+            <a href="IMAGES/UNICAF.jpg" download class="btn btn2"
+              >Download CV</a
+            >
           </div>
           <div class="contact-right">
             <form action="">
-              <input type="text" name="Name" placeholder="Your Name" required>
-              <input type="email" name="email" placeholder="Your email" required>
-              <textarea name="message" rows="6" placeholder="Your message"></textarea>
+              <input type="text" name="Name" placeholder="Your Name" required />
+              <input
+                type="email"
+                name="email"
+                placeholder="Your email"
+                required
+              />
+              <textarea
+                name="message"
+                rows="6"
+                placeholder="Your message"
+              ></textarea>
               <button type="submit" class="btn btn2">Submit</button>
             </form>
           </div>
