Changed padding to make it responsive on mobile devices

--- a/index.html
+++ b/index.html
@@ -230,8 +230,13 @@
                 href="https://www.linkedin.com/in/kondwani-padyera-9a511a26b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
                 ><i class="fa-brands fa-linkedin"></i
               ></a>
-              <a href="https://www.instagram.com/padyerakondwani?utm_source=qr&igsh=Y3F5Zjh3b2F3ZWdp"><i class="fa-brands fa-instagram"></i></a>
-              <a href="https://x.com/KPadyera?t=55bmJblVSq4lthSdrhm2Ow&s=09"><i class="fa-brands fa-x-twitter"></i></a>
+              <a
+                href="https://www.instagram.com/padyerakondwani?utm_source=qr&igsh=Y3F5Zjh3b2F3ZWdp"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+              <a href="https://x.com/KPadyera?t=55bmJblVSq4lthSdrhm2Ow&s=09"
+                ><i class="fa-brands fa-x-twitter"></i
+              ></a>
               <a href=""><i class="fa-brands fa-whatsapp"></i></a>
             </div>
             <a href="IMAGES/UNICAF.jpg" download class="btn btn2"
